src/main/java/com/fokkenrood/antlr/ProfielSpraakParser.java
// Generated from src\main\java\com\fokkenrood\antlr\ProfielSpraak.g4 by ANTLR 4.2
package com.fokkenrood.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ProfielSpraakParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		BLOCKCOMMENT=1, LINECOMMENT=2, TEKST=3, AANGIFTE=4, AAN=5, ALS=6, ALLE=7, 
		ARTIKEL=8, BEGINDATUM=9, BESTAAT=10, BEVAT=11, CONTRAINFORMATIE=12, DAN=13, 
		DDE=14, DE=15, DIE=16, EEEN=17, EEN=18, EN=19, EINDDATUM=20, GELIJK=21, 
		GESTELD=22, GROTER=23, HEEFT=24, HHET=25, HET=26, IN=27, INDIEN=28, INVOER=29, 
		IS=30, KLEINER=31, LUIDT=32, MMAAK=33, MET=34, NIET=35, OF=36, OP=37, 
		OMVAT=38, PARAMETERS=39, PARTIJ=40, RREGEL=41, REGEL=42, RUBRIEK=43, SCORE=44, 
		TTESTCASE=45, TESTGEVALLEN=46, TOELICHTING=47, UIT=48, VOLDAAN=49, VOLGENDE=50, 
		VOORWAARDEN=51, VUREN=52, WAARBIJ=53, WAARDOOR=54, WORDT=55, ZAL=56, ZIJNDE=57, 
		DUBBELE_PUNT=58, GETAL_NUL=59, PUNT=60, STREEPJE=61, DATUM=62, FLOAT=63, 
		GETAL=64, WOORD=65, WS=66;
	public static final String[] tokenNames = {
		"<INVALID>", "BLOCKCOMMENT", "LINECOMMENT", "TEKST", "'aangifte'", "'aan'", 
		"'als'", "'alle'", "'artikel'", "'begindatum'", "'bestaat'", "'bevat'", 
		"'contrainformatie'", "'dan'", "'De'", "'de'", "'die'", "'Een'", "'een'", 
		"'en'", "'einddatum'", "'gelijk'", "'gesteld'", "'groter'", "'heeft'", 
		"'Het'", "'het'", "'in'", "'indien'", "'invoer'", "'is'", "'kleiner'", 
		"'luidt'", "'Maak'", "'met'", "'niet'", "'of'", "'op'", "'omvat'", "'parameters'", 
		"'partij'", "'Regel'", "'regel'", "'rubriek'", "'score'", "'Testcase'", 
		"'testgevallen'", "'toelichting'", "'uit'", "'voldaan'", "'volgende'", 
		"'voorwaarden'", "'vuren'", "'waarbij'", "'waardoor'", "'wordt'", "'zal'", 
		"'zijnde'", "':'", "'0'", "'.'", "'-'", "DATUM", "FLOAT", "GETAL", "WOORD", 
		"WS"
	};
	public static final int
		RULE_statements = 0, RULE_regel = 1, RULE_maakscore = 2, RULE_object = 3, 
		RULE_voorwaarde = 4, RULE_testcase = 5, RULE_testgeval = 6, RULE_invoer = 7, 
		RULE_toekennen = 8, RULE_waarde = 9, RULE_vergelijking = 10, RULE_feit = 11;
	public static final String[] ruleNames = {
		"statements", "regel", "maakscore", "object", "voorwaarde", "testcase", 
		"testgeval", "invoer", "toekennen", "waarde", "vergelijking", "feit"
	};

	@Override
	public String getGrammarFileName() { return "ProfielSpraak.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ProfielSpraakParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class StatementsContext extends ParserRuleContext {
		public TestcaseContext testcase(int i) {
			return getRuleContext(TestcaseContext.class,i);
		}
		public List<TestcaseContext> testcase() {
			return getRuleContexts(TestcaseContext.class);
		}
		public List<RegelContext> regel() {
			return getRuleContexts(RegelContext.class);
		}
		public RegelContext regel(int i) {
			return getRuleContext(RegelContext.class,i);
		}
		public StatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProfielSpraakListener ) ((ProfielSpraakListener)listener).enterStatements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProfielSpraakListener ) ((ProfielSpraakListener)listener).exitStatements(this);
		}
	}

	public final StatementsContext statements() throws RecognitionException {
		StatementsContext _localctx = new StatementsContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_statements);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(26); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(26);
				switch (_input.LA(1)) {
				case RREGEL:
					{
					setState(24); regel();
					}
					break;
				case TTESTCASE:
					{
					setState(25); testcase();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(28); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==RREGEL || _la==TTESTCASE );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RegelContext extends ParserRuleContext {
		public Token rg;
		public Token rs;
		public TerminalNode WORDT() { return getToken(ProfielSpraakParser.WORDT, 0); }
		public TerminalNode DE() { return getToken(ProfielSpraakParser.DE, 0); }
		public TerminalNode VOLGENDE() { return getToken(ProfielSpraakParser.VOLGENDE, 0); }
		public TerminalNode AAN() { return getToken(ProfielSpraakParser.AAN, 0); }
		public TerminalNode DUBBELE_PUNT(int i) {
			return getToken(ProfielSpraakParser.DUBBELE_PUNT, i);
		}
		public TerminalNode IN() { return getToken(ProfielSpraakParser.IN, 0); }
		public List<ObjectContext> object() {
			return getRuleContexts(ObjectContext.class);
		}
		public TerminalNode PUNT() { return getToken(ProfielSpraakParser.PUNT, 0); }
		public TerminalNode INDIEN() { return getToken(ProfielSpraakParser.INDIEN, 0); }
		public List<TerminalNode> DUBBELE_PUNT() { return getTokens(ProfielSpraakParser.DUBBELE_PUNT); }
		public TerminalNode TEKST(int i) {
			return getToken(ProfielSpraakParser.TEKST, i);
		}
		public TerminalNode VOLDAAN() { return getToken(ProfielSpraakParser.VOLDAAN, 0); }
		public List<TerminalNode> TEKST() { return getTokens(ProfielSpraakParser.TEKST); }
		public TerminalNode VOORWAARDEN() { return getToken(ProfielSpraakParser.VOORWAARDEN, 0); }
		public ObjectContext object(int i) {
			return getRuleContext(ObjectContext.class,i);
		}
		public TerminalNode RREGEL() { return getToken(ProfielSpraakParser.RREGEL, 0); }
		public MaakscoreContext maakscore() {
			return getRuleContext(MaakscoreContext.class,0);
		}
		public TerminalNode LUIDT() { return getToken(ProfielSpraakParser.LUIDT, 0); }
		public RegelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_regel; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProfielSpraakListener ) ((ProfielSpraakListener)listener).enterRegel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProfielSpraakListener ) ((ProfielSpraakListener)listener).exitRegel(this);
		}
	}

	public final RegelContext regel() throws RecognitionException {
		RegelContext _localctx = new RegelContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_regel);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(30); match(RREGEL);
			setState(31); ((RegelContext)_localctx).rg = match(TEKST);
			setState(32); match(IN);
			setState(33); ((RegelContext)_localctx).rs = match(TEKST);
			setState(34); match(LUIDT);
			setState(35); match(DUBBELE_PUNT);
			setState(36); maakscore((((RegelContext)_localctx).rg!=null?((RegelContext)_localctx).rg.getText():null));
			setState(37); match(INDIEN);
			setState(38); match(AAN);
			setState(39); match(DE);
			setState(40); match(VOLGENDE);
			setState(41); match(VOORWAARDEN);
			setState(42); match(WORDT);
			setState(43); match(VOLDAAN);
			setState(44); match(DUBBELE_PUNT);
			setState(46); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(45); object((((RegelContext)_localctx).rg!=null?((RegelContext)_localctx).rg.getText():null));
				}
				}
				setState(48); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==STREEPJE );
			setState(50); match(PUNT);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MaakscoreContext extends ParserRuleContext {
		public String rg;
		public WaardeContext w2;
		public WaardeContext w3;
		public WaardeContext w4;
		public WaardeContext w5;
		public TerminalNode MET() { return getToken(ProfielSpraakParser.MET, 0); }
		public TerminalNode BEGINDATUM(int i) {
			return getToken(ProfielSpraakParser.BEGINDATUM, i);
		}
		public TerminalNode DE() { return getToken(ProfielSpraakParser.DE, 0); }
		public TerminalNode VOLGENDE() { return getToken(ProfielSpraakParser.VOLGENDE, 0); }
		public TerminalNode IS(int i) {
			return getToken(ProfielSpraakParser.IS, i);
		}
		public List<WaardeContext> waarde() {
			return getRuleContexts(WaardeContext.class);
		}
		public WaardeContext waarde(int i) {
			return getRuleContext(WaardeContext.class,i);
		}
		public TerminalNode TOELICHTING(int i) {
			return getToken(ProfielSpraakParser.TOELICHTING, i);
		}
		public TerminalNode EEN() { return getToken(ProfielSpraakParser.EEN, 0); }
		public List<TerminalNode> BEGINDATUM() { return getTokens(ProfielSpraakParser.BEGINDATUM); }
		public TerminalNode EINDDATUM(int i) {
			return getToken(ProfielSpraakParser.EINDDATUM, i);
		}
		public List<TerminalNode> TOELICHTING() { return getTokens(ProfielSpraakParser.TOELICHTING); }
		public TerminalNode SCORE(int i) {
			return getToken(ProfielSpraakParser.SCORE, i);
		}
		public List<TerminalNode> IS() { return getTokens(ProfielSpraakParser.IS); }
		public TerminalNode DUBBELE_PUNT() { return getToken(ProfielSpraakParser.DUBBELE_PUNT, 0); }
		public List<TerminalNode> STREEPJE() { return getTokens(ProfielSpraakParser.STREEPJE); }
		public TerminalNode MMAAK() { return getToken(ProfielSpraakParser.MMAAK, 0); }
		public List<TerminalNode> SCORE() { return getTokens(ProfielSpraakParser.SCORE); }
		public TerminalNode PARAMETERS() { return getToken(ProfielSpraakParser.PARAMETERS, 0); }
		public TerminalNode STREEPJE(int i) {
			return getToken(ProfielSpraakParser.STREEPJE, i);
		}
		public List<TerminalNode> EINDDATUM() { return getTokens(ProfielSpraakParser.EINDDATUM); }
		public MaakscoreContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public MaakscoreContext(ParserRuleContext parent, int invokingState, String rg) {
			super(parent, invokingState);
			this.rg = rg;
		}
		@Override public int getRuleIndex() { return RULE_maakscore; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProfielSpraakListener ) ((ProfielSpraakListener)listener).enterMaakscore(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProfielSpraakListener ) ((ProfielSpraakListener)listener).exitMaakscore(this);
		}
	}

	public final MaakscoreContext maakscore(String rg) throws RecognitionException {
		MaakscoreContext _localctx = new MaakscoreContext(_ctx, getState(), rg);
		enterRule(_localctx, 4, RULE_maakscore);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(52); match(MMAAK);
			setState(53); match(EEN);
			setState(54); match(SCORE);
			setState(55); match(MET);
			setState(56); match(DE);
			setState(57); match(VOLGENDE);
			setState(58); match(PARAMETERS);
			setState(59); match(DUBBELE_PUNT);
			setState(77);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==STREEPJE) {
				{
				{
				setState(60); match(STREEPJE);
				setState(73);
				switch (_input.LA(1)) {
				case SCORE:
					{
					setState(61); match(SCORE);
					setState(62); match(IS);
					setState(63); ((MaakscoreContext)_localctx).w2 = waarde();
					}
					break;
				case TOELICHTING:
					{
					setState(64); match(TOELICHTING);
					setState(65); match(IS);
					setState(66); ((MaakscoreContext)_localctx).w3 = waarde();
					}
					break;
				case BEGINDATUM:
					{
					setState(67); match(BEGINDATUM);
					setState(68); match(IS);
					setState(69); ((MaakscoreContext)_localctx).w4 = waarde();
					}
					break;
				case EINDDATUM:
					{
					setState(70); match(EINDDATUM);
					setState(71); match(IS);
					setState(72); ((MaakscoreContext)_localctx).w5 = waarde();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				}
				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ObjectContext extends ParserRuleContext {
		public String rg;
		public Token obj;
		public TerminalNode DE() { return getToken(ProfielSpraakParser.DE, 0); }
		public TerminalNode STREEPJE() { return getToken(ProfielSpraakParser.STREEPJE, 0); }
		public TerminalNode AANGIFTE() { return getToken(ProfielSpraakParser.AANGIFTE, 0); }
		public List<VoorwaardeContext> voorwaarde() {
			return getRuleContexts(VoorwaardeContext.class);
		}
		public TerminalNode HET() { return getToken(ProfielSpraakParser.HET, 0); }
		public TerminalNode PARTIJ() { return getToken(ProfielSpraakParser.PARTIJ, 0); }
		public TerminalNode ARTIKEL() { return getToken(ProfielSpraakParser.ARTIKEL, 0); }
		public TerminalNode HEEFT() { return getToken(ProfielSpraakParser.HEEFT, 0); }
		public TerminalNode RUBRIEK() { return getToken(ProfielSpraakParser.RUBRIEK, 0); }
		public VoorwaardeContext voorwaarde(int i) {
			return getRuleContext(VoorwaardeContext.class,i);
		}
		public ObjectContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public ObjectContext(ParserRuleContext parent, int invokingState, String rg) {
			super(parent, invokingState);
			this.rg = rg;
		}
		@Override public int getRuleIndex() { return RULE_object; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProfielSpraakListener ) ((ProfielSpraakListener)listener).enterObject(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProfielSpraakListener ) ((ProfielSpraakListener)listener).exitObject(this);
		}
	}

	public final ObjectContext object(String rg) throws RecognitionException {
		ObjectContext _localctx = new ObjectContext(_ctx, getState(), rg);
		enterRule(_localctx, 6, RULE_object);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(80); match(STREEPJE);
			setState(81);
			_la = _input.LA(1);
			if ( !(_la==DE || _la==HET) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			setState(85);
			switch (_input.LA(1)) {
			case AANGIFTE:
				{
				setState(82); ((ObjectContext)_localctx).obj = match(AANGIFTE);
				}
				break;
			case ARTIKEL:
				{
				setState(83); ((ObjectContext)_localctx).obj = match(ARTIKEL);
				}
				break;
			case PARTIJ:
				{
				setState(84); ((ObjectContext)_localctx).obj = match(PARTIJ);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(87); match(HEEFT);
			setState(88); match(RUBRIEK);
			setState(90); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(89); voorwaarde(rg);
				}
				}
				setState(92); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( ((((_la - 19)) & ~0x3f) == 0 && ((1L << (_la - 19)) & ((1L << (EN - 19)) | (1L << (OF - 19)) | (1L << (WOORD - 19)))) != 0) );
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VoorwaardeContext extends ParserRuleContext {
		public String rg;
		public Token eo;
		public FeitContext f1;
		public VergelijkingContext v;
		public WaardeContext w1;
		public FeitContext f2;
		public Token not;
		public WaardeContext w2;
		public FeitContext f3;
		public TerminalNode BEVAT() { return getToken(ProfielSpraakParser.BEVAT, 0); }
		public TerminalNode UIT() { return getToken(ProfielSpraakParser.UIT, 0); }
		public WaardeContext waarde() {
			return getRuleContext(WaardeContext.class,0);
		}
		public TerminalNode OF() { return getToken(ProfielSpraakParser.OF, 0); }
		public TerminalNode CONTRAINFORMATIE() { return getToken(ProfielSpraakParser.CONTRAINFORMATIE, 0); }
		public FeitContext feit() {
			return getRuleContext(FeitContext.class,0);
		}
		public TerminalNode NIET() { return getToken(ProfielSpraakParser.NIET, 0); }
		public TerminalNode EN() { return getToken(ProfielSpraakParser.EN, 0); }
		public TerminalNode DIE() { return getToken(ProfielSpraakParser.DIE, 0); }
		public TerminalNode BESTAAT() { return getToken(ProfielSpraakParser.BESTAAT, 0); }
		public VergelijkingContext vergelijking() {
			return getRuleContext(VergelijkingContext.class,0);
		}
		public VoorwaardeContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public VoorwaardeContext(ParserRuleContext parent, int invokingState, String rg) {
			super(parent, invokingState);
			this.rg = rg;
		}
		@Override public int getRuleIndex() { return RULE_voorwaarde; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProfielSpraakListener ) ((ProfielSpraakListener)listener).enterVoorwaarde(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProfielSpraakListener ) ((ProfielSpraakListener)listener).exitVoorwaarde(this);
		}
	}

	public final VoorwaardeContext voorwaarde(String rg) throws RecognitionException {
		VoorwaardeContext _localctx = new VoorwaardeContext(_ctx, getState(), rg);
		enterRule(_localctx, 8, RULE_voorwaarde);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			switch (_input.LA(1)) {
			case EN:
				{
				setState(94); ((VoorwaardeContext)_localctx).eo = match(EN);
				}
				break;
			case OF:
				{
				setState(95); ((VoorwaardeContext)_localctx).eo = match(OF);
				}
				break;
			case WOORD:
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(118);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				{
				setState(98); ((VoorwaardeContext)_localctx).f1 = feit();
				setState(99); ((VoorwaardeContext)_localctx).v = vergelijking();
				setState(100); ((VoorwaardeContext)_localctx).w1 = waarde();
				}
				break;

			case 2:
				{
				setState(102); ((VoorwaardeContext)_localctx).f2 = feit();
				setState(103); match(BEVAT);
				setState(105);
				_la = _input.LA(1);
				if (_la==NIET) {
					{
					setState(104); ((VoorwaardeContext)_localctx).not = match(NIET);
					}
				}

				setState(107); ((VoorwaardeContext)_localctx).w2 = waarde();
				}
				break;

			case 3:
				{
				setState(109); ((VoorwaardeContext)_localctx).f3 = feit();
				setState(110); match(UIT);
				setState(111); match(CONTRAINFORMATIE);
				setState(112); match(DIE);
				setState(114);
				_la = _input.LA(1);
				if (_la==NIET) {
					{
					setState(113); ((VoorwaardeContext)_localctx).not = match(NIET);
					}
				}

				setState(116); match(BESTAAT);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TestcaseContext extends ParserRuleContext {
		public Token tc;
		public Token rs;
		public TerminalNode PUNT() { return getToken(ProfielSpraakParser.PUNT, 0); }
		public TerminalNode DE() { return getToken(ProfielSpraakParser.DE, 0); }
		public TerminalNode VOLGENDE() { return getToken(ProfielSpraakParser.VOLGENDE, 0); }
		public TerminalNode DUBBELE_PUNT() { return getToken(ProfielSpraakParser.DUBBELE_PUNT, 0); }
		public List<TestgevalContext> testgeval() {
			return getRuleContexts(TestgevalContext.class);
		}
		public TerminalNode TTESTCASE() { return getToken(ProfielSpraakParser.TTESTCASE, 0); }
		public TerminalNode TEKST(int i) {
			return getToken(ProfielSpraakParser.TEKST, i);
		}
		public List<TerminalNode> TEKST() { return getTokens(ProfielSpraakParser.TEKST); }
		public TestgevalContext testgeval(int i) {
			return getRuleContext(TestgevalContext.class,i);
		}
		public TerminalNode OMVAT() { return getToken(ProfielSpraakParser.OMVAT, 0); }
		public TerminalNode IN() { return getToken(ProfielSpraakParser.IN, 0); }
		public TerminalNode TESTGEVALLEN() { return getToken(ProfielSpraakParser.TESTGEVALLEN, 0); }
		public TestcaseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_testcase; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProfielSpraakListener ) ((ProfielSpraakListener)listener).enterTestcase(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProfielSpraakListener ) ((ProfielSpraakListener)listener).exitTestcase(this);
		}
	}

	public final TestcaseContext testcase() throws RecognitionException {
		TestcaseContext _localctx = new TestcaseContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_testcase);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(120); match(TTESTCASE);
			setState(121); ((TestcaseContext)_localctx).tc = match(TEKST);
			setState(122); match(IN);
			setState(123); ((TestcaseContext)_localctx).rs = match(TEKST);
			setState(124); match(OMVAT);
			setState(125); match(DE);
			setState(126); match(VOLGENDE);
			setState(127); match(TESTGEVALLEN);
			setState(128); match(DUBBELE_PUNT);
			setState(130); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(129); testgeval();
				}
				}
				setState(132); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==STREEPJE );
			setState(134); match(PUNT);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TestgevalContext extends ParserRuleContext {
		public Token tg;
		public Token not;
		public TerminalNode MET() { return getToken(ProfielSpraakParser.MET, 0); }
		public TerminalNode DE() { return getToken(ProfielSpraakParser.DE, 0); }
		public TerminalNode ZAL() { return getToken(ProfielSpraakParser.ZAL, 0); }
		public TerminalNode INVOER() { return getToken(ProfielSpraakParser.INVOER, 0); }
		public TerminalNode WAARDOOR() { return getToken(ProfielSpraakParser.WAARDOOR, 0); }
		public List<InvoerContext> invoer() {
			return getRuleContexts(InvoerContext.class);
		}
		public TerminalNode DUBBELE_PUNT() { return getToken(ProfielSpraakParser.DUBBELE_PUNT, 0); }
		public TerminalNode STREEPJE() { return getToken(ProfielSpraakParser.STREEPJE, 0); }
		public TerminalNode TEKST() { return getToken(ProfielSpraakParser.TEKST, 0); }
		public TerminalNode REGEL() { return getToken(ProfielSpraakParser.REGEL, 0); }
		public TerminalNode NIET() { return getToken(ProfielSpraakParser.NIET, 0); }
		public TerminalNode ALS() { return getToken(ProfielSpraakParser.ALS, 0); }
		public InvoerContext invoer(int i) {
			return getRuleContext(InvoerContext.class,i);
		}
		public TerminalNode VUREN() { return getToken(ProfielSpraakParser.VUREN, 0); }
		public TestgevalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_testgeval; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProfielSpraakListener ) ((ProfielSpraakListener)listener).enterTestgeval(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProfielSpraakListener ) ((ProfielSpraakListener)listener).exitTestgeval(this);
		}
	}

	public final TestgevalContext testgeval() throws RecognitionException {
		TestgevalContext _localctx = new TestgevalContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_testgeval);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(136); match(STREEPJE);
			setState(137); ((TestgevalContext)_localctx).tg = match(TEKST);
			setState(138); match(MET);
			setState(139); match(ALS);
			setState(140); match(INVOER);
			setState(141); match(DUBBELE_PUNT);
			setState(143); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(142); invoer();
				}
				}
				setState(145); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==EEN );
			setState(147); match(WAARDOOR);
			setState(148); match(DE);
			setState(149); match(REGEL);
			setState(151);
			_la = _input.LA(1);
			if (_la==NIET) {
				{
				setState(150); ((TestgevalContext)_localctx).not = match(NIET);
				}
			}

			setState(153); match(ZAL);
			setState(154); match(VUREN);
			}
			}
		}
		catch (RecognitionException re) {
